<resources>
    <string name="app_name">AplikasiFinansialSertifikasi</string>
    <string name="logo_description">Aplikasi Finansial</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button_text">Login</string>
    <string name="pt_buku_kas_nusantara">PT. Buku Kas Nusantara</string>
    <string name="nim_edt">NIM</string>
    <string name="fullname_register_text">Nama Lengkap</string>
    <string name="register_btn">Register</string>
</resources>